--- a/AlmacenHierritos/src/main/resources/com/example/almacenhierritos/buscarproveedor_almacen.fxml
+++ b/AlmacenHierritos/src/main/resources/com/example/almacenhierritos/buscarproveedor_almacen.fxml
@@ -2,10 +2,14 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -44,7 +48,23 @@
       </HBox>
       <VBox alignment="CENTER" maxWidth="911.0" prefHeight="482.0" prefWidth="900.0" style="-fx-spacing: 20;">
          <children>
-            <HBox id="hBoxTarjetas" alignment="CENTER" prefHeight="433.0" prefWidth="844.0" style="-fx-background-color: E0E7FE; -fx-spacing: 20; -fx-pref-height: fill; -fx-max-width: 844;" />
+            <ScrollPane maxWidth="1256.0" prefHeight="488.0" prefWidth="900.0" style="-fx-background-color: E0E7FE; -fx-max-width: 840;">
+               <content>
+                  <GridPane fx:id="gridPane" prefHeight="568.0" prefWidth="825.0" style="-fx-padding: 10; -fx-hgap: 10; -fx-vgap: 10;">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="581.0" minHeight="10.0" prefHeight="130.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="581.0" minHeight="10.0" prefHeight="140.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="492.0" minHeight="0.0" prefHeight="127.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="237.0" minHeight="10.0" prefHeight="138.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </content>
+            </ScrollPane>
             <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-spacing: 15;">
                <children>
                   <Button fx:id="botonCrear" mnemonicParsing="false" onAction="#clickBotonCrear" prefHeight="37.0" prefWidth="130.0" style="-fx-background-color: rgba(132, 153, 226, 1);" text="Crear" textFill="#f7f7f7">
