--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/buscarcliente_ventas.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/buscarcliente_ventas.fxml
@@ -4,14 +4,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -55,7 +53,7 @@
                            </font>
                         </Label>
                         <ScrollPane maxWidth="1256.0" prefHeight="488.0" prefWidth="900.0" style="-fx-background-color: E0E7FE; -fx-max-width: 840;">
-                           <content>
+                           <!--content>
                               <GridPane prefHeight="571.0" prefWidth="615.0" style="-fx-padding: 10; -fx-hgap: 10; -fx-vgap: 10;">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -68,6 +66,13 @@
                                     <RowConstraints maxHeight="237.0" minHeight="10.0" prefHeight="138.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                               </GridPane>
+                           </content-->
+                           <content>
+                              <TextArea fx:id="textArea" editable="false" prefHeight="458.0" prefWidth="614.0">
+                                 <font>
+                                    <Font name="Segoe UI" size="20.0" />
+                                 </font>
+                              </TextArea>
                            </content>
                         </ScrollPane>
                      </children>
