--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/tarjetaproducto2.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/tarjetaproducto2.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="304.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ventashierritos.TarjetaProducto2Controller">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="304.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="243.0" style="-fx-padding: 10; -fx-spacing: 2;">
          <children>
@@ -21,10 +22,10 @@
             </Label>
          </children>
       </VBox>
-      <Label fx:id="labelCancelar" alignment="CENTER" prefHeight="71.0" prefWidth="62.0" style="-fx-background-color: #F0726D;" text="X" textFill="WHITE">
+      <Button fx:id="botonX" mnemonicParsing="false" prefHeight="79.0" prefWidth="71.0" style="-fx-background-color: #F0726D;" text="X" textFill="WHITE">
          <font>
-            <Font name="Segoe UI Bold" size="36.0" />
+            <Font name="Century Gothic Bold" size="32.0" />
          </font>
-      </Label>
+      </Button>
    </children>
 </HBox>
