--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/usuario_actualizarinfo_admin.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/usuario_actualizarinfo_admin.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -67,13 +66,7 @@
                                     <Font name="Segoe UI Bold" size="14.0" />
                                  </font>
                               </Label>
-                              <SplitMenuButton fx:id="menuTipoDoc" mnemonicParsing="false" prefHeight="25.0" prefWidth="419.0" style="-fx-background-color: white;" text="Escoge">
-                                 <items>
-                                    <MenuItem mnemonicParsing="false" text="Cédula de ciudadanía" />
-                                    <MenuItem mnemonicParsing="false" text="Cédula de extranjería" />
-                                    <MenuItem mnemonicParsing="false" text="Pasaporte" />
-                                 </items>
-                              </SplitMenuButton>
+                              <ComboBox fx:id="comboBoxTipoDoc" prefHeight="25.0" prefWidth="414.0" style="-fx-background-color: white;" />
                            </children>
                         </VBox>
                         <VBox prefHeight="24.0" prefWidth="187.0" style="-fx-spacing: 10;">
@@ -121,17 +114,7 @@
                         <Font name="Segoe UI Bold" size="14.0" />
                      </font>
                   </Label>
-                  <SplitMenuButton fx:id="menuTipoUsuario" mnemonicParsing="false" prefHeight="25.0" prefWidth="402.0" style="-fx-background-color: white;" text="Escoge">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Ingeniero" />
-                        <MenuItem mnemonicParsing="false" text="Gerente" />
-                        <MenuItem mnemonicParsing="false" text="Bodeguero" />
-                        <MenuItem mnemonicParsing="false" text="Vendedor" />
-                     </items>
-                     <font>
-                        <Font name="Segoe UI" size="12.0" />
-                     </font>
-                  </SplitMenuButton>
+                  <ComboBox fx:id="comboBoxTipoUsuario" prefHeight="25.0" prefWidth="414.0" style="-fx-background-color: white;" />
                </children>
             </VBox>
          </children>
