--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/agregarcliente_ventas.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/agregarcliente_ventas.fxml
@@ -2,9 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" spacing="20.0" style="-fx-background-color: white; -fx-padding: 0px; -fx-spacing: 0px;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ventashierritos.AgregarClienteController">
+<VBox prefHeight="600.0" prefWidth="900.0" spacing="20.0" style="-fx-background-color: white; -fx-padding: 0px; -fx-spacing: 0px;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prueba.HelloController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
@@ -21,7 +20,7 @@
          <children>
             <ImageView fitHeight="80.0" fitWidth="298.0" pickOnBounds="true" preserveRatio="true" style="-fx-translate-x: 10;">
                <image>
-                  <Image url="@Images/logo.png" />
+                  <Image url="@../../../../Images/logo.png" />
                </image>
             </ImageView>
             <HBox alignment="CENTER" prefHeight="80.0" prefWidth="546.0" style="-fx-background-color: C5D0F6; -fx-background-radius: 20; -fx-max-height: 30; -fx-translate-y: 33; -fx-padding: 4; -fx-spacing: 10;">
@@ -31,7 +30,7 @@
                         <Font name="Segoe UI" size="12.0" />
                      </font>
                   </TextField>
-                  <Button fx:id="botonBuscar" mnemonicParsing="false" onAction="#clickBotonBuscar" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: F6F7FF; -fx-background-radius: 20; -fx-pref-height: 17; -fx-max-height: 17;" text="Buscar" textFill="#0e103c">
+                  <Button fx:id="botonBuscar" mnemonicParsing="false" onAction="#onHelloButtonClick" prefHeight="30.0" prefWidth="96.0" style="-fx-background-color: F6F7FF; -fx-background-radius: 20; -fx-pref-height: 17; -fx-max-height: 17;" text="Buscar" textFill="#0e103c">
                      <font>
                         <Font name="Segoe UI Bold" size="12.0" />
                      </font>
@@ -71,13 +70,7 @@
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <SplitMenuButton fx:id="menuTipoDocumento" mnemonicParsing="false" prefHeight="25.0" prefWidth="362.0" style="-fx-background-color: white;" text="Escoge">
-                          <items>
-                            <MenuItem mnemonicParsing="false" text="Cédula de ciudadanía" />
-                            <MenuItem mnemonicParsing="false" text="Cédula de extranjería" />
-                              <MenuItem mnemonicParsing="false" text="Pasaporte" />
-                          </items>
-                        </SplitMenuButton>
+                        <ComboBox fx:id="comboBoxTipoDoc" prefHeight="25.0" prefWidth="414.0" style="-fx-background-color: white;" />
                         <Label prefHeight="18.0" prefWidth="400.0" text="Número de documento" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
@@ -117,35 +110,25 @@
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <SplitMenuButton fx:id="menuTipoPersona" mnemonicParsing="false" prefHeight="25.0" prefWidth="362.0" style="-fx-background-color: white;" text="Escoge">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Natural" />
-                              <MenuItem mnemonicParsing="false" text="Jurídica" />
-                           </items>
-                        </SplitMenuButton>
+                        <ComboBox fx:id="comboBoxTipoPers" prefHeight="25.0" prefWidth="414.0" style="-fx-background-color: white;" />
                         <Label prefHeight="18.0" prefWidth="400.0" text="Responsable de IVA" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Label>
-                        <SplitMenuButton fx:id="menuIVA" mnemonicParsing="false" prefHeight="25.0" prefWidth="362.0" style="-fx-background-color: white;" text="Escoge">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Sí" />
-                              <MenuItem mnemonicParsing="false" text="No" />
-                           </items>
-                        </SplitMenuButton>
+                        <ComboBox fx:id="comboBoxRespIVA" prefHeight="25.0" prefWidth="414.0" style="-fx-background-color: white;" />
                      </children>
                   </VBox>
                </children>
             </HBox>
             <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-spacing: 15;">
                <children>
-                  <Button fx:id="botonAceptar" mnemonicParsing="false" onAction="#clickBotonAceptar" prefHeight="37.0" prefWidth="130.0" style="-fx-background-color: #0e103c;" text="Aceptar" textFill="#f7f7f7">
+                  <Button fx:id="botonAceptar" mnemonicParsing="false" onAction="#clickBotonCrearProducto" prefHeight="37.0" prefWidth="130.0" style="-fx-background-color: #0e103c;" text="Aceptar" textFill="#f7f7f7">
                      <font>
                         <Font name="Segoe UI Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="botonCancelar" mnemonicParsing="false" onAction="#clickBotonCancelar" prefHeight="37.0" prefWidth="130.0" style="-fx-background-color: gray;" text="Cancelar" textFill="#f7f7f7">
+                  <Button fx:id="botonCancelar" mnemonicParsing="false" onAction="#clickBotonRegresar" prefHeight="37.0" prefWidth="130.0" style="-fx-background-color: gray;" text="Cancelar" textFill="#f7f7f7">
                      <font>
                         <Font name="Segoe UI Bold" size="14.0" />
                      </font>
