--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/agregarcliente_ventas.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/agregarcliente_ventas.fxml
@@ -25,7 +25,7 @@
             </ImageView>
             <HBox alignment="CENTER" prefHeight="80.0" prefWidth="546.0" style="-fx-background-color: C5D0F6; -fx-background-radius: 20; -fx-max-height: 30; -fx-translate-y: 33; -fx-padding: 4; -fx-spacing: 10;">
                <children>
-                  <TextField fx:id="textfieldBuscar" prefHeight="0.0" prefWidth="429.0" promptText="¿Qué necesitas?" style="-fx-background-radius: 20;">
+                  <TextField fx:id="textfieldBuscar" prefHeight="0.0" prefWidth="429.0" promptText="Decoración" style="-fx-background-radius: 20;">
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
