--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/usuario_actualizarinfo_admin.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/usuario_actualizarinfo_admin.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-height: 468; -fx-pref-width: 860;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-height: 468; -fx-pref-width: 860;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.UsuarioActualizarInfoController">
    <children>
       <HBox prefHeight="68.0" prefWidth="860.0" style="-fx-background-color: C5D0F6;">
          <children>
