--- a/AdminHierritos/src/main/resources/com/example/adminhierritos/balance_informes_admin.fxml
+++ b/AdminHierritos/src/main/resources/com/example/adminhierritos/balance_informes_admin.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-height: 382; -fx-pref-width: 840;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-height: 382; -fx-pref-width: 840;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.adminhierritos.BalanceInformeController">
    <children>
       <Label prefHeight="67.0" prefWidth="1013.0" style="-fx-background-color: C5D0F6; -fx-label-padding: 20;" text="Balance Mensual" textFill="WHITE">
          <font>
