--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/tarjetaProducto.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/tarjetaProducto.fxml
@@ -40,7 +40,7 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="31.0" prefWidth="168.0">
                      <children>
-                        <Label text="\$500" textFill="#0e103c">
+                        <Label fx:id="labelPrecio" text="\$500" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI" size="18.0" />
                            </font>
@@ -51,7 +51,7 @@
             </VBox>
             <VBox alignment="CENTER" prefHeight="138.0" prefWidth="72.0" style="-fx-padding: 5; -fx-spacing: 5;">
                <children>
-                  <ImageView fx:id="imageOk" fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imageOk" onMouseClicked="#clickBotonChulito" fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Images/okey.png" />
                      </image></ImageView>
