--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/buscarcliente2_ventas.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/buscarcliente2_ventas.fxml
@@ -57,7 +57,7 @@
                      <children>
                         <ScrollPane maxWidth="1256.0" prefHeight="488.0" prefWidth="900.0" style="-fx-background-color: E0E7FE; -fx-max-width: 840;">
                            <content>
-                              <GridPane fx:id="gridPane1" prefHeight="571.0" prefWidth="501.0" style="-fx-padding: 10; -fx-hgap: 10; -fx-vgap: 10;">
+                              <GridPane fx:id="gridPane1" prefHeight="571.0" prefWidth="501.0" style="-fx-padding: 10; -fx-hgap: 10; -fx-vgap: 10; -fx-translate-y: -80; -fx-translate-x: -5;">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -77,11 +77,11 @@
             </Pane>
             <VBox alignment="CENTER" prefHeight="508.0" prefWidth="479.0" style="-fx-spacing: 10; -fx-padding: 20;">
                <children>
-                  <ScrollPane prefHeight="391.0" prefWidth="324.0">
+                  <ScrollPane prefHeight="389.0" prefWidth="324.0">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="30000.0" prefWidth="308.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="30000.0" prefWidth="308.0" style="-fx-background-color: C5D0F6;">
                            <children>
-                              <GridPane fx:id="gridPane2" layoutX="-12.0" prefHeight="100.0" prefWidth="308.0" style="-fx-padding: 10; -fx-hgap: 10; -fx-vgap: 10;">
+                              <GridPane fx:id="gridPane2" layoutX="-12.0" prefHeight="100.0" prefWidth="308.0" style="-fx-padding: 10; -fx-hgap: 10; -fx-vgap: 0; -fx-translate-y: -19; -fx-translate-x: 5;">
                                  <columnConstraints>
                                     <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                  </columnConstraints>
@@ -93,28 +93,28 @@
                         </AnchorPane>
                     </content>
                   </ScrollPane>
-                  <HBox prefHeight="38.0" prefWidth="324.0" style="-fx-background-color: white; -fx-spacing: 15;">
+                  <HBox alignment="BOTTOM_LEFT" prefHeight="38.0" prefWidth="324.0" style="-fx-background-color: white; -fx-spacing: 15;">
                      <children>
-                        <Button fx:id="botonHacerCot" mnemonicParsing="false" onAction="#clickBotonHacerCot" prefHeight="28.0" prefWidth="166.0" style="-fx-background-color: #0e103c;" text="Hacer Cotización" textFill="#f7f7f7">
+                        <Button fx:id="botonHacerCot" alignment="CENTER" mnemonicParsing="false" onAction="#clickBotonHacerCot" prefHeight="28.0" prefWidth="166.0" style="-fx-background-color: C5D0F6; -fx-pref-width: 154,5;" text="Hacer Cotización" textFill="#0e103c">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Button>
-                        <Label fx:id="labelTotal" prefHeight="28.0" prefWidth="144.0" text="Total:                   ">
+                        <Label fx:id="labelTotal" prefHeight="28.0" prefWidth="155.0" text="Total:                   ">
                            <font>
                               <Font name="Segoe UI Bold" size="18.0" />
                            </font>
                         </Label>
                      </children>
                   </HBox>
-                  <HBox prefHeight="52.0" prefWidth="324.0">
+                  <HBox prefHeight="35.0" prefWidth="324.0" style="-fx-spacing: 15;">
                      <children>
-                        <Button fx:id="botonAceptar" mnemonicParsing="false" onAction="#clickBotonAceptar" prefHeight="40.0" prefWidth="166.0" style="-fx-background-color: #0e103c;" text="Aceptar" textFill="#f7f7f7">
+                        <Button fx:id="botonAceptar" mnemonicParsing="false" onAction="#clickBotonAceptar" prefHeight="38.0" prefWidth="166.0" style="-fx-background-color: #0e103c; -fx-pref-width: 154,5;" text="Aceptar" textFill="#f7f7f7">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
                         </Button>
-                        <Button fx:id="botonCancelar" mnemonicParsing="false" onAction="#clickBotonCancelar" prefHeight="38.0" prefWidth="153.0" style="-fx-background-color: C5D0F6;" text="Cancelar" textAlignment="CENTER" textFill="#0e103c">
+                        <Button fx:id="botonCancelar" mnemonicParsing="false" onAction="#clickBotonCancelar" prefHeight="38.0" prefWidth="153.0" style="-fx-background-color: gray; -fx-pref-width: 154,5;" text="Cancelar" textAlignment="CENTER" textFill="WHITE">
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font>
