--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/tarjetaproducto2.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/tarjetaproducto2.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="tarjeta" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="304.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ventashierritos.TarjetaProducto2Controller">
+<HBox fx:id="tarjeta" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="304.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ventashierritos.TarjetaProducto2Controller">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="243.0" style="-fx-padding: 10; -fx-spacing: 2;">
          <children>
