--- a/VentasHierritos/src/main/resources/com/example/ventashierritos/factura.fxml
+++ b/VentasHierritos/src/main/resources/com/example/ventashierritos/factura.fxml
@@ -4,13 +4,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -41,14 +39,7 @@
                      <children>
                         <ScrollPane maxWidth="1256.0" prefHeight="488.0" prefWidth="900.0" style="-fx-background-color: E0E7FE; -fx-max-width: 840;">
                            <content>
-                              <GridPane prefHeight="683.0" prefWidth="615.0" style="-fx-padding: 10; -fx-hgap: 10; -fx-vgap: 10;">
-                                 <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                 </columnConstraints>
-                                 <rowConstraints>
-                                    <RowConstraints maxHeight="581.0" minHeight="10.0" prefHeight="130.0" vgrow="SOMETIMES" />
-                                 </rowConstraints>
-                              </GridPane>
+                              <TextArea fx:id="textArea" prefHeight="486.0" prefWidth="614.0" />
                            </content>
                         </ScrollPane>
                      </children>
