--- a/AlmacenHierritos/src/main/resources/com/example/almacenhierritos/tarjetaproveedor.fxml
+++ b/AlmacenHierritos/src/main/resources/com/example/almacenhierritos/tarjetaproveedor.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="186.5" prefWidth="254.0" style="-fx-padding: 10; -fx-spacing: 5;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="vBoxTarjeta" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="186.5" prefWidth="254.0" style="-fx-padding: 10; -fx-spacing: 5;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.almacenhierritos.TarjetaProveedorController">
    <children>
       <HBox prefHeight="173.0" prefWidth="254.0">
          <children>
